--- a/MaCo.Extensions.Logging/MaCo.Extensions.Logging.csproj
+++ b/MaCo.Extensions.Logging/MaCo.Extensions.Logging.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
 	  <TargetFrameworks>netstandard2.0;net6.0;net7.0;net8.0</TargetFrameworks>
 	  <AssemblyVersion>8.0.0</AssemblyVersion>
-	  <Version>8.0.4.5</Version>
+	  <Version>8.1.0.0</Version>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -14,7 +14,7 @@
 	  <Copyright>aghili.mostafa@gmail.com</Copyright>
 	  <PackageProjectUrl>https://www.nuget.org/packages/Aghili.Logging</PackageProjectUrl>
 	  <PackageReadmeFile>readme.md</PackageReadmeFile>
-	  <PackageTags>Logging;log;windows;Net7;Net6;netstandard;net8;console;windowsservice</PackageTags>
+	  <PackageTags>Logging;log;windows;Net9;Net6;netstandard;net8;console;windowsservice</PackageTags>
 	  <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
 	  <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
   </PropertyGroup>
@@ -31,6 +31,9 @@
 	</ItemGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
+	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1" />
 	  <PackageReference Include="System.Text.Json" Version="8.0.5" />
   </ItemGroup>
 
